tests/expectations/compiler/function/standard_function_calls_standard_function_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372042]: Only `inline` can be called from a `function` or `inline`.
    --> compiler-test:6:19
     |
   6 |            return adder(a, b);
     |                   ^^^^^^^^^^^
Error [ETYC0372042]: Only `inline` can be called from a `function` or `inline`.
    --> compiler-test:8:20
     |
   8 |             return subber(a, b);
     |                    ^^^^^^^^^^^^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:1:1
     |
   1 | 
   2 | 
   3 | program test.aleo {    
     | ^^^^^^^^^^^^
"""]
